Use new base image

--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -1,20 +1,15 @@
-FROM fedora:37
+FROM philcompton/devcontainer-base:latest
+
+USER root
 
 ENV PATH="${PATH}:/opt/go/bin"
 ENV GOPATH="/home/vscode/go"
 ENV GOROOT="/opt/go"
 ENV GO_VERSION="1.20.2"
 
-RUN dnf update -y \
-    && dnf install -y curl dotnet gcc git libicu make unzip wget  \
-    && dnf clean all -y
-
 RUN wget https://go.dev/dl/go${GO_VERSION}.linux-amd64.tar.gz \
     && tar -C /opt/ -xzf go${GO_VERSION}.linux-amd64.tar.gz \
     && rm go${GO_VERSION}.linux-amd64.tar.gz
-
-RUN groupadd --gid 1000 vscode \
-    && useradd --uid 1000 --gid 1000 -m vscode 
 
 USER vscode
 
