--- a/go/devcontainer/devcontainer.json
+++ b/go/devcontainer/devcontainer.json
@@ -4,7 +4,10 @@
   "customizations": {
     "vscode": {
       // Add the IDs of extensions you want installed when the container is created.
-      "extensions": ["golang.go"]
+      "extensions": ["golang.go"],
+      "settings": {
+        "terminal.integrated.shell.*": "/usr/bin/zsh"
+      }
     }
   }
 }
