--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,7 +1,7 @@
 FROM fedora:37
 
 RUN dnf update -y \
-    && dnf install -y bat curl exa fzf gcc git iputils jq libicu libuser make unzip wget zsh  \
+    && dnf install -y bat curl exa fzf gcc git iputils jq libicu libuser make unzip wget xz zsh  \
     && dnf clean all -y
 
 RUN groupadd --gid 1000 vscode \
