--- a/javascript/Dockerfile
+++ b/javascript/Dockerfile
@@ -6,7 +6,7 @@ ENV PATH="${PATH}:/opt/node/bin"
 ENV NODE_VERSION="18.15.0"
 
 RUN wget https://nodejs.org/dist/v${NODE_VERSION}/node-v${NODE_VERSION}-linux-x64.tar.xz \
-    && tar -C /opt/ -xzf node-v${NODE_VERSION}-linux-x64.tar.xz \
+    && tar -C /opt/ -xf node-v${NODE_VERSION}-linux-x64.tar.xz \
     && mv /opt/node-v${NODE_VERSION}-linux-x64 /opt/node \
     && rm node-v${NODE_VERSION}-linux-x64.tar.xz
 
