--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,5 +1,7 @@
 FROM fedora:37
 
+ENV BUILD_DATE 20230324
+
 RUN dnf update -y \
     && dnf install -y bat curl exa fzf gcc git iputils jq libicu libuser make unzip wget xz zsh  \
     && dnf clean all -y
