--- a/c-cpp/Dockerfile
+++ b/c-cpp/Dockerfile
@@ -2,7 +2,8 @@ FROM philcompton/devcontainer-base:latest
 
 USER root
 
-RUN dnf install -y clang cmake gcc-c++ gdb libtool lldb llvm ltrace && dnf clean all -y
+RUN pacman -S cmake gdb gef ltrace nasm --noconfirm \
+    && pacman -Scc --noconfirm
 
 USER vscode
 
