--- a/c-cpp/Dockerfile
+++ b/c-cpp/Dockerfile
@@ -2,7 +2,7 @@ FROM philcompton/devcontainer-base:latest
 
 USER root
 
-RUN pacman -S cmake gdb gef ltrace nasm --noconfirm \
+RUN pacman -S clang cmake gdb gef lldb llvm ltrace nasm --noconfirm \
     && pacman -Scc --noconfirm
 
 USER vscode
