--- a/c-cpp/Dockerfile
+++ b/c-cpp/Dockerfile
@@ -2,8 +2,8 @@ FROM philcompton/devcontainer-base:latest
 
 USER root
 
-RUN pacman -S clang cmake gdb gef lldb llvm ltrace nasm --noconfirm \
-    && pacman -Scc --noconfirm
+RUN dnf install -y clang cmake gcc-c++ gdb libtool lldb llvm ltrace && dnf clean all -y
+
 
 USER vscode
 
