--- a/c-cpp/Dockerfile
+++ b/c-cpp/Dockerfile
@@ -2,7 +2,7 @@ FROM philcompton/devcontainer-base:latest
 
 USER root
 
-RUN dnf install -y clang cmake gcc-c++ gdb libtool lldb llvm ltrace && dnf clean all -y
+RUN dnf install -y clang cmake gcc-c++ gdb libtool lldb llvm ltrace nasm && dnf clean all -y
 
 
 USER vscode
