--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -2,7 +2,7 @@ FROM fedora:39
 
 ENV BUILD_DATE 20231012
 
-RUN RUN dnf update -y \
+RUN dnf update -y \
     && dnf install -y curl gcc git iputils libicu libuser make ripgrep unzip wget xz zsh  \
     && dnf clean all -y
 
