--- a/r/Dockerfile
+++ b/r/Dockerfile
@@ -2,11 +2,12 @@ FROM philcompton/devcontainer-base:latest
 
 USER root
 
-RUN pacman -S gcc-fortran python python-pip r --noconfirm \
-    && pacman -Scc --noconfirm
-
-RUN R -e "install.packages(c('httpg', 'languageserver','tidyverse'), repos = 'https://archive.linux.duke.edu/cran/')"
+RUN dnf install -y gcc-fortran libRmath libRmath-devel python3-pip R-core R-core-devel R-R6  \
+    && dnf clean all -y
 
 USER vscode
 
-RUN pip3 install -U radian 
+RUN pip3 install -U radian \
+    && mkdir -p ~/R/x86_64-redhat-linux-gnu-library/4.3 \
+    && R -e "install.packages(c('languageserver','tidyverse'), repos = 'https://archive.linux.duke.edu/cran/')"
+
