no radian for now

--- a/r/Dockerfile
+++ b/r/Dockerfile
@@ -7,7 +7,7 @@ RUN dnf install -y gcc-fortran libRmath libRmath-devel python3-pip R-core R-core
 
 USER vscode
 
-RUN pip3 install -U radian \
-    && mkdir -p ~/R/x86_64-redhat-linux-gnu-library/4.3 \
+RUN  mkdir -p ~/R/x86_64-redhat-linux-gnu-library/4.3 \
     && R -e "install.packages(c('languageserver','tidyverse'), repos = 'https://archive.linux.duke.edu/cran/')"
 
+# pip3 install -U radian \
