--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,10 +1,10 @@
-FROM fedora:39
+FROM debian:sid
 
-ENV BUILD_DATE 20231016
+ENV BUILD_DATE 20231102
 
-RUN dnf update -y \
-    && dnf install -y curl gcc git iputils libicu libuser make ripgrep unzip wget xz zsh  \
-    && dnf clean all -y
+RUN apt update -y \
+    && apt install -y curl gcc git libicu72 libuser make ripgrep unzip wget xz-utils zsh  \
+    && apt clean all -y
 
 RUN groupadd --gid 1000 vscode \
     && useradd --uid 1000 --gid 1000 -m vscode -s /usr/bin/zsh
