--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,10 +1,10 @@
-FROM debian:sid
+FROM fedora:39
 
-ENV BUILD_DATE 20231102
+ENV BUILD_DATE 20231107
 
-RUN apt update -y \
-    && apt install -y curl gcc git libicu72 libuser make ripgrep unzip wget xz-utils zsh  \
-    && apt clean all -y
+RUN dnf upgrade -y \
+    && dnf install -y curl git libicu72 libuser make ripgrep unzip wget xz zsh  \
+    && dnf clean all -y
 
 RUN groupadd --gid 1000 vscode \
     && useradd --uid 1000 --gid 1000 -m vscode -s /usr/bin/zsh
