--- a/dev-r/Dockerfile
+++ b/dev-r/Dockerfile
@@ -2,10 +2,12 @@ FROM philcompton/dev-base:20231203
 
 USER root
 
-RUN dnf install gfortran python3-pip r-base -y \
-    && dnf clean all -y \
-    && R -e "install.packages(c('languageserver','tidyverse'), repos = 'https://archive.linux.duke.edu/cran/')"
+RUN dnf install gcc-gfortran libRmath libRmath-devel python3-devel python3-pip python3-wheel R-base R-inline -y \
+    && dnf clean all -y 
+
 
 USER vscode
 
-RUN pip install -U radian \
+RUN pip3 install -U radian \
+    && mkdir -p ~/R/x86_64-redhat-linux-gnu-library/4.3 \
+    && R -e "install.packages(c('languageserver','tidyverse'), repos = 'https://archive.linux.duke.edu/cran/')"
