--- a/dev-go/Dockerfile
+++ b/dev-go/Dockerfile
@@ -21,4 +21,5 @@ RUN go install golang.org/x/tools/gopls@latest \
     && go install github.com/go-delve/delve/cmd/dlv@latest \
     && go install honnef.co/go/tools/cmd/staticcheck@latest \
     && go install github.com/fatih/gomodifytags@latest \
-    && go install github.com/josharian/impl@latest
+    && go install github.com/josharian/impl@latest \
+    && go install golang.org/x/tools/cmd/deadcode@latest
