--- a/dev-c-cpp/Dockerfile
+++ b/dev-c-cpp/Dockerfile
@@ -1,10 +1,8 @@
-FROM philcompton/dev-base:20240128
+FROM philcompton/dev-base:20240902
 
 USER root
 
-RUN dnf upgrade -y && dnf install -y cmake gcc gcc-c++ gdb libtool make nasm && dnf clean all -y
+RUN dnf upgrade -y && dnf install -y binutils cmake gcc gcc-c++ gdb libtool nasm && dnf clean all -y
 
 
 USER vscode
-
-
