--- a/dev-python/Dockerfile
+++ b/dev-python/Dockerfile
@@ -1,9 +1,9 @@
-FROM philcompton/dev-base:20250220
+FROM philcompton/dev-base:latest
 
 USER root
 
 RUN dnf update -y \
-    && dnf install python3 python3-autopep8 python3-flake8 python3-pip python3-virtualenv -y \
+    && dnf install python3 python3-autopep8 python3-flake8 python3-pip python3-virtualenv uv -y \
     && dnf clean all -y 
 
 USER vscode
